src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */



/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: rgb(14, 165, 233);
  --ifm-color-primary-dark: rgb(14, 165, 233);
  --ifm-color-primary-darker: rgb(14, 165, 233);
  --ifm-color-primary-darkest: rgb(14, 165, 233);
  --ifm-color-primary-light: rgb(14, 165, 233);
  --ifm-color-primary-lighter: rgb(14, 165, 233);
  --ifm-color-primary-lightest: rgb(14, 165, 233);
  --ifm-code-font-size: 95%;
  --ifm-background-color: rgb(255, 255, 255);
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: rgb(56, 189, 248);
  --ifm-color-primary-dark: rgb(56, 189, 248);
  --ifm-color-primary-darker: rgb(56, 189, 248);
  --ifm-color-primary-darkest: rgb(56, 189, 248);
  --ifm-color-primary-light: rgb(56, 189, 248);
  --ifm-color-primary-lighter: rgb(56, 189, 248);
  --ifm-color-primary-lightest: rgb(56, 189, 248);
  --ifm-background-color: #070c17;
  --ifm-code-background: rgba(255, 255, 255, 0.15);
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.header-github-link:hover {
  opacity: 0.6;
}

:root .navbar {
  backdrop-filter: blur(8px);
  background-color: rgba(255, 255, 255, 0.85);
  border-bottom: rgba(15, 23, 42, 0.1) solid 1px;
}

[data-theme="dark"] .navbar {
  backdrop-filter: blur(8px);
  background-color: rgba(11, 16, 30, 0.6);
  border-bottom: rgba(248, 250, 252, 0.1) solid 1px;
}

